Add fixes to the build file so CI works.